# RepoExplorer.ai

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: graph.py  tools.py
backend/app/api/routes/: ai.py  repo.py
backend/app/core/: config.py  logging.py
backend/app/rag/: chunking.py  embeddings.py  ingestion.py  vector_store.py
backend/app/schemas/: requests.py
backend/app/services/: github_service.py  groq_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppHeader.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ExampleQuestions.tsx  FileTree.tsx  RepoOverview.tsx  RepoUrlInput.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/components/insights/: CustomNode.tsx  FlowCanvas.tsx  InsightLegend.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  insightsData.ts  theme.ts  types.ts
frontend/src/pages/: Index.tsx  InsightsPage.tsx  StructurePage.tsx  WelcomePage.tsx
